force-app/main/default/objects/hed__Course__c/fields/AUCC_Category__c.field-meta.xml
<CustomField>
    <fullName>AUCC_Category__c</fullName>
    <description>AUCC category of a course.</description>
    <inlineHelpText>AUCC category of a course.</inlineHelpText>
    <label>AUCC Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AUCC_Categories</valueSetName>
    </valueSet>
</CustomField>