force-app/main/default/objects/hed__Course__c/fields/Banner_Surrogate_ID__c.field-meta.xml
<CustomField>
    <fullName>Banner_Surrogate_ID__c</fullName>
    <description>Surrogate ID in Banner for external ID matching.</description>
    <externalId>true</externalId>
    <inlineHelpText>Surrogate ID in Banner for external ID matching.</inlineHelpText>
    <label>Banner Surrogate ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>