force-app/main/default/objects/hed__Course__c/fields/Credit_Hours_Max__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hours_Max__c</fullName>
    <description>Maximum Credit Hours Value (for variable credit course).</description>
    <inlineHelpText>Maximum Credit Hours Value (for variable credit course).</inlineHelpText>
    <label>Credit Hours (Max)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>