force-app/main/default/objects/hed__Course__c/fields/Guaranteed_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if course is Guaranteed Transfer in COHE</description>
    <inlineHelpText>True if course is Guaranteed Transfer in COHE</inlineHelpText>
    <label>Guaranteed Transfer</label>
    <type>Checkbox</type>
</CustomField>