force-app/main/default/objects/hed__Course__c/fields/Guaranteed_Transfer_Category__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Transfer_Category__c</fullName>
    <description>The transfer category as specified by COHE.</description>
    <inlineHelpText>The transfer category as specified by COHE.</inlineHelpText>
    <label>Guaranteed Transfer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AH1</fullName>
            </value>
            <value>
                <fullName>AH2</fullName>
            </value>
            <value>
                <fullName>AH3</fullName>
            </value>
            <value>
                <fullName>AH4</fullName>
            </value>
            <value>
                <fullName>CO1</fullName>
            </value>
            <value>
                <fullName>CO2</fullName>
            </value>
            <value>
                <fullName>CO3</fullName>
            </value>
            <value>
                <fullName>HI1</fullName>
            </value>
            <value>
                <fullName>MA1</fullName>
            </value>
            <value>
                <fullName>SC1</fullName>
            </value>
            <value>
                <fullName>SC2</fullName>
            </value>
            <value>
                <fullName>SS1</fullName>
            </value>
            <value>
                <fullName>SS2</fullName>
            </value>
            <value>
                <fullName>SS3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>