force-app/main/default/objects/hed__Course__c/fields/Has_Online_Sections__c.field-meta.xml
<CustomField>
    <fullName>Has_Online_Sections__c</fullName>
    <description>True if Course has any registered online sections.</description>
    <formula>Online_Section_Count__c&gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if Course has any registered online sections.</inlineHelpText>
    <label>Has Online Sections</label>
    <type>Checkbox</type>
</CustomField>