force-app/main/default/objects/hed__Course__c/fields/Has_Online_Sections_Available__c.field-meta.xml
<CustomField>
    <fullName>Has_Online_Sections_Available__c</fullName>
    <description>True if there is a MC section available for registration.</description>
    <formula>Available_Online_Section_Count__c&gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if there is a MC section available for registration.</inlineHelpText>
    <label>Has Online Sections Available</label>
    <type>Checkbox</type>
</CustomField>