force-app/main/default/objects/hed__Course__c/fields/Online_Section_Count__c.field-meta.xml
<CustomField>
    <fullName>Online_Section_Count__c</fullName>
    <description>Count of the # of online offerings. Used to mark a course as &quot;available online&quot;.</description>
    <inlineHelpText>Count of the # of online offerings. Used to mark a course as &quot;available online&quot;.</inlineHelpText>
    <label>Online Section Count</label>
    <summaryFilterItems>
        <field>hed__Course_Offering__c.Campus_Code__c</field>
        <operation>equals</operation>
        <value>MC</value>
    </summaryFilterItems>
    <summaryForeignKey>hed__Course_Offering__c.hed__Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>