force-app/main/default/objects/hed__Course__c/listViews/Credit_Courses.listView-meta.xml
<ListView>
    <fullName>Credit_Courses</fullName>
    <columns>NAME</columns>
    <columns>Course_Code__c</columns>
    <columns>lms_hed__LMS_Reference_Code__c</columns>
    <columns>hed__Subject__c</columns>
    <columns>hed__Credit_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>hed__Course__c.Credit</value>
    </filters>
    <label>Credit Courses</label>
</ListView>